--- a/src/app/pages/meta-list-page/meta-list-page.component.html
+++ b/src/app/pages/meta-list-page/meta-list-page.component.html
@@ -2,6 +2,7 @@
 
 <div class="top-buttons">
   <button
+    [routerLink]="'/meta-create'"
   matButton="elevated"
   matTooltip="Criar uma nova meta!">
     Adicionar
@@ -31,6 +32,18 @@
   <ng-container matColumnDef="objective">
     <th mat-header-cell *matHeaderCellDef> Objetivo </th>
     <td mat-cell *matCellDef="let element"> {{element.objective}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef> Actions </th>
+    <td mat-cell *matCellDef="let element">
+      <button (click)="deleteRecord(element.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+      <button (click)="editRecord(element.id)">
+        <mat-icon>edit</mat-icon>
+      </button>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
